--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,48 @@
-name: Build and Publish NLExtract Docker Image
-
-# Controls when the action will run. Triggers the workflow on push
-# events but only for the master branch
+name: Release
 on:
   push:
-    branches:
-      - master
-    paths-ignore:
-      - 'docs/**'
-      - '**.md'
+    tags:
+      - "v*"
 
-# Ignore PRs (permission problem for DockerHub)
-#  pull_request:
-#    branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  push_to_registry:
-    name: Push Docker Image to Docker Hub
-    # The type of runner that the job will run on
+  create_release:
+    name: Create release
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Check out the repo with Stetl submodule
+      - name: Code Checkout
         uses: actions/checkout@v2
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          submodules: recursive
-
-      # TODO v2 is almost out with new syntax
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ env.RELEASE_VERSION }}
+          draft: false
+  push_to_registry:
+    name: Push Docker image to GitHub Packages
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - id: docker-tag
+        uses: yuya-takeyama/docker-tag-from-github-ref-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: nlextract/nlextract
-          tags: latest,1.5.4dev
-          # tag_with_ref: true
-          # tag_with_sha: true
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:${{ steps.docker-tag.outputs.tag }}
+            ghcr.io/${{ github.repository }}:latest
