add full adress config

--- a/bagv2/etl/conf/adres_full.cfg
+++ b/bagv2/etl/conf/adres_full.cfg
@@ -10,17 +10,23 @@
 # Just van den Broecke - 2021
 
 [etl]
-chains = input_sql_address_tables|output_postgres_sql
-
+chains = input_sql_address_plus_tables|output_postgres_sql,
+         input_sql_address_full_tables|output_postgres_sql
 
 #
 # INPUTS
 #
 
 # Pre SQL file inputs to be executed
-[input_sql_address_tables]
+[input_sql_address_plus_tables]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/adres/adres-plus2adres-tabel.sql
+file_path = sql/adres/adres-tabel-plus.sql
+format_args = schema:{schema}
+
+# Pre SQL file inputs to be executed
+[input_sql_address_full_tables]
+class = stetl.inputs.fileinput.StringFileInput
+file_path = sql/adres/adres-plus2adres-full-tabel.sql
 format_args = schema:{schema}
 
 #
